package ru.molokoin;

/**
 * Интерфейс содержит методы взаимодействия программы с польззователем.
 * 
 * Все взаимодействие в настоящий момент предполагается через ввод данных через консоль
 * и получение в консоль результатов обработки файла с текстом скрипта.
 * Однако могут разрабатываться и прочие реализации интерфейса, для взаимодействия с пользователем,
 * они как раз и будут расширять настоящий интерфейс.
 */
public interface ScriptingFace {
    /**
     * Метод получает от ползователя путь к файлу со скриптом, для обработки
     */
    public static String setSourcePath(){
        return null;
    }
    /**
     * Метод получает от пользователя путь,<p>
     * для сохранения результатов работы программы
     * (в даном приложении его использование не рпедполагается)
     */
    public abstract void setTargetPath();
}
