@startuml
title "Classes to: Scripting"
class Runner /'Запуск программы'/
interface ScriptingFace /'Интерфейс устанавливающий методы взаимодействия пользователя и программы'/
class UseConsole /'Реализация консольного интерфейса ScriptingFace'/
class PropertyTools /'Работа с настройками программы'/
/'class ConsoleTools Работа с консолью'/
class StorageTools /'Работа с файлами'/
class Parcer /'Обработка текста'/

class Runner{
    /'Запуск программы'/
    + void main()
    /'Приветствие пользователя и вывод мануала'/
    - void hello()
}

Runner *-- UseConsole
Runner *-- StorageTools
Runner *-- Parcer

UseConsole --|> ScriptingFace 
@enduml